--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <link rel="icon" href="Images/Leigo.png">
+      <title>Lei Shop</title>
+      <!-- Fonts -->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
+      <!--CSS-->
       <link rel="stylesheet" href="css/style.css">
       </head>
     <body>
