--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
       </head>
     <body>
     <h1>Lei Shop</h1>
+     <br>
+     <br>
+     <br>
+     <br>
+     
+<button type="button"> <img src="Images/Flower Example.jpeg" height="200" width="200" onclick="location.href='Flower.html'"></button>
     </body>
     </html>
